# attendance_monitoring

./: .gitignore  README.md  pyproject.toml
src/attendance_monitoring/: get_attendance_data.py  google_api.py  main.py
